tdf#70633 unset Alt if detected as AltGr in both KeyInput branches

we are unsetting Alt if the modifier is AltGr in one SalEvent::KeyInput
case but not in another. If I replicate the unset of Alt if AlrGr in
the other place then both UTF-16 parts of the codepoint get accepted
and the described input case works

Change-Id: Ifa8a5afbb1853ef3d5f388fd5e7bd3bbc048e260